Add create movie endpoint
