# src/main/java/com/mariovyord/mdb_lite/controller/MovieController.java
@@ -6,9 +6,12 @@ import org.springframework.web.bind.annotation.RestController;
 import com.mariovyord.mdb_lite.service.MovieService;
 
 import de.dlh.lht.ti.api.MoviesApi;
+import de.dlh.lht.ti.model.MovieDto;
 import de.dlh.lht.ti.model.MoviePageDto;
 import de.dlh.lht.ti.model.MoviePagingCriteria;
 import de.dlh.lht.ti.model.MovieQueryParams;
+import io.swagger.v3.oas.annotations.parameters.RequestBody;
+import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
 
 @RestController
@@ -22,5 +25,10 @@ public class  MovieController implements MoviesApi {
         MoviePageDto moviePageDto = movieService.getMovies(movieQueryParams, pagingCriteria);
         return ResponseEntity.ok(moviePageDto);
     }
-    
+
+    @Override
+    public ResponseEntity<MovieDto> createMovie(@Valid @RequestBody MovieDto movieDto) {
+        MovieDto createdMovie = movieService.createMovie(movieDto);
+        return ResponseEntity.status(201).body(createdMovie);
+    }
 }
